# app-properties

./: Cargo.toml  README.md
crates/app-properties/: Cargo.toml  README.md
crates/app-properties/src/: lib.rs
crates/derive-app-properties/: Cargo.toml  README.md
crates/derive-app-properties/src/: lib.rs
