[package]
name = "app-properties"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/app-properties"
description = """
Derive and load AppProperties.
"""
categories = ["configuration"]
keywords = ["properties", "app-properties", "configuration", "env"]

[dependencies]
derive-app-properties = { workspace = true }
