[package]
name = "derive-app-properties"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/app-properties"
description = """
Proc-macro implementation of the app-properties crate.
"""
categories = ["configuration"]
keywords = ["properties", "app-properties", "configuration", "env"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
